# Currency-Converter

./: .gitignore  CMakeLists.txt  Main copy.qml  Main.qml  README.md  main.cpp
